--- a/client/package.json
+++ b/client/package.json
@@ -2,14 +2,18 @@
   "name": "cougarclub",
   "version": "0.1.0",
   "private": true,
+  "main": "server.js",
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "start": "node server.js"
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "vue": "^3.2.13",
+    "vue-router": "^4.5.0",
+    "express": "^4.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
