--- a/server/package.json
+++ b/server/package.json
@@ -3,10 +3,8 @@
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/index.js",
-    "tsc": "tsc"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -14,12 +12,7 @@
   "description": "",
   "dependencies": {
     "body-parser": "^1.20.3",
-    "express": "4.21.2",
+    "express": "^4.21.2",
     "morgan": "^1.10.0"
-  },
-  "devDependencies": {
-    "@types/express": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
   }
 }
