--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,4 @@
 MONGO_URI=mongodb+srv://gesakro:whch520pentakiller%3F%3FREYN4@cluster0.f4tc9.mongodb.net/cougarClub_db?retryWrites=true&w=majority
 PORT=5000
+
+JWT_SECRET=frijoles34
