--- a/client/package.json
+++ b/client/package.json
@@ -11,9 +11,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "express": "^4.18.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0",
-    "express": "^4.18.2"
+    "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
