--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "vue": "^3.2.13",
