--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "axios": "^1.9.0",
     "core-js": "^3.8.3",
     "express": "^4.18.2",
+    "firebase": "^11.6.1",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
