--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,8 @@
     "core-js": "^3.8.3",
     "express": "^4.18.2",
     "firebase": "^11.6.1",
+    "firebase-admin": "^13.3.0",
+    "multer": "^1.4.5-lts.2",
     "vue": "^3.2.13",
     "vue-router": "^4.5.0"
   },
