--- a/server/.gitignore
+++ b/server/.gitignore
@@ -2,7 +2,6 @@
 node_modules
 /dist
 
-
 # local env files
 .env.local
 .env.*.local
@@ -22,3 +21,6 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+
+# Firebase Service Account Key (clave sensible, no versionarla)
+serviceAccountKey.json
