--- a/server/package.json
+++ b/server/package.json
@@ -18,9 +18,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "4.21.2",
+    "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.2"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
