--- a/server/package.json
+++ b/server/package.json
@@ -22,7 +22,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
-    "multer": "^1.4.5-lts.2"
+    "multer": "^1.4.5-lts.2",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@types/express": "^5.0.0",
