--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "4.21.2",
     "firebase-admin": "^13.3.0",
     "jsonwebtoken": "^9.0.2",
+    "mercadopago": "^1.5.10",
     "mongoose": "^8.14.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.2",
