--- a/client/package.json
+++ b/client/package.json
@@ -17,7 +17,8 @@
     "firebase-admin": "^13.3.0",
     "multer": "^1.4.5-lts.2",
     "vue": "^3.2.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
