--- a/server/package.json
+++ b/server/package.json
@@ -1,12 +1,11 @@
 {
   "name": "server",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
-    "dev": "ts-node-dev src/index.ts",
+    "dev": "nodemon server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node build/index.js",
-    "tsc": "tsc"
+    "start": "node server.js"
   },
   "keywords": [],
   "author": "",
@@ -27,8 +26,6 @@
     "nodemailer": "^7.0.3"
   },
   "devDependencies": {
-    "@types/express": "^5.0.0",
-    "ts-node-dev": "^2.0.0",
-    "typescript": "^5.8.2"
+    "nodemon": "^3.0.0"
   }
 }
